[STEP09, STEP10] 오세룡 E-COMMERCE (#7)
* docs: 동시성 문제 보고서

* refactor: 주문 통합 테스트 DisplayName 수정

* refactor: Point 낙관적 락 적용

* refactor: Point 도메인 테스트 객체 생성 시 빌더 사용하게 수정

* feat: Point 충전 통합테스트 동시성 부분 추가

* feat: Point 충전 통합테스트 낙관적 락 동시성 부분 추가

* refactor: jpa함수 이름 변경
findBy~WithLock -> findBy~WithPessimisticLock

* refactor: 비관적 락 적용 후 테스트 코드 수정

* refactor: 주문 취소 비관적 락 적용 및 데드락 방지

* feat: 주문 생성 시 재고 관리 동시성 테스트 작성

* feat: 통합 테스트를 위한 deleteAll추가

* refactor: 결제 처리 비관적 락 -> 낙관적 락으로 변경

* refactor: 결제 처리 낙관적 락 사용 수정으로 인한 단위테스트 수정

* feat: 결제 처리 낙관적 락 동시성 제어 테스트 추가

* feat: 테스트 작성하면서 필요한 jpa기능 추가

* docs: 보고서 수정

* refactor: toOrder createdAt추가

* refactor: 반환 타입 List로 변경

* refactor: 주문 취소 낙관적 락 적용

* feat: 주문 취소 통합 테스트 작성

* refactor: 외부 데이터 플랫폼으로 데이터 전송 부분 이벤트 방식으로 처리 및 비동기 적용

* feat: DB 보고서 작성할 때 쓴 데이터 초기화 기능
사용 시 주석부분 해제